# trees-stable-diffusion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: compare_models.py  train_sd15_inaturalist.py  train_sd35_autoarborist.py
sd1.5-code/: README.md  __main__.py  check_gpu.sh  download_models.py  generate_images.py  make_genus_splits.py  modular_config.json  precompute_latents.py  prompt_profiles.py  scripts-commands.txt  sd_lora_torch260.yml  train_lora.py  train_text_to_image_lora.py
sd3.5-code/: download_for_hpc.py  download_models.py  generate_images.py  generate_modular.sh  make_genus_splits.py  modular_config.json  precompute_latents.py  scripts-commands.txt  sd_modular.sh  stderr.621984  stdout.621984  train_exclusive_gpu.slurm  train_lora.py  train_text_to_image_lora.py
tests/: test_basic.py  test_evaluation.py
trees_sd/: __init__.py  cli.py  evaluate_cli.py
trees_sd/configs/: sd15_autoarborist.yaml  sd15_inaturalist.yaml  sd35_inaturalist.yaml
trees_sd/datasets/: __init__.py  loader.py
trees_sd/evaluation/: __init__.py  metrics.py
trees_sd/training/: __init__.py  trainer.py
trees_sd/utils/: __init__.py
